<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_height"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_gravity="right"
        android:text="@string/save"
        android:textSize="@dimen/default_text_size"
        android:onClick="onButtonPressed"
        android:id="@+id/save"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/location"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/price"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/desc"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"/>

</LinearLayout>