<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/single_deal_height">

    <ImageView
        android:layout_width="@dimen/single_deal_height"
        android:layout_height="@dimen/single_deal_height"
        android:layout_alignParentLeft="true"
        android:id="@+id/img"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/img"
        android:layout_marginLeft="@dimen/default_margin"
        android:id="@+id/location"
        android:text="@string/location"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:textSize="@dimen/default_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/img"
        android:layout_marginLeft="@dimen/default_margin"
        android:text="@string/desc"
        android:ellipsize="end"
        android:maxLines="3"
        android:gravity="center_vertical"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@id/location"
        android:id="@+id/desc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/s15"
        android:textSize="@dimen/default_text_size"
        android:id="@+id/price"/>

</RelativeLayout>